--- a/sway/.config/sway/autostart.conf
+++ b/sway/.config/sway/autostart.conf
@@ -3,4 +3,5 @@ exec swaync
 exec blueman-applet 
 exec nm-applet 
 exec /usr/lib/hyprpolkitagent
+exec flameshot
 # exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
