--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -32,10 +32,12 @@ output HDMI-A-1 resolution 1920x1080@144Hz position 0,0
 output eDP-1    resolution 1920x1080@60Hz  position 0,1080 
 
 # if lid is closed, disable output, if opened, enable output
-bindswitch --locked --reload {
-  lid:on  output eDP-1  disable
-  lid:off output eDP-1  enable
-}
+# bindswitch --locked --reload {
+#   lid:on  output eDP-1  disable
+#   lid:off output eDP-1  enable
+# }
+bindswitch lid:on  output eDP-1 disable
+bindswitch lid:off output eDP-1 enable
 #
 # You can get the names of your outputs by runneng: swaymsg -t get_outputs
 
@@ -231,6 +233,7 @@ input "9354:23343:XCTECH_Wireless-Receiver" {
 #rules
 for_window [app_id="pavucontrol"] floating enable
 for_window [app_id="nwg-look"] floating enable
+for_window [app_id="flameshot"] border pixel 0, floating enable, fullscreen disable, move absolute position 0 0
 
 include /etc/sway/config.d/*
 include ~/.config/sway/autostart.conf
