--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,8 +1,8 @@
 # Font
-font_family Hack Nerd Font
+font_family Hack Nerd Font Mono
 italic_font auto
 bold_italic_font auto
-font_size 14.0
+font_size 16.0
 
 # Theme
 term xterm-256color
