--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -78,3 +78,9 @@ color14 #94e2d5
 # white
 color7  #bac2de
 color15 #a6adc8
+
+
+# maps
+map ctrl+backspace send_text all \x17
+map ctrl+left send_text all \x1b\x62
+map ctrl+right send_text all \x1b\x66
