--- a/sway/.config/sway/autostart.conf
+++ b/sway/.config/sway/autostart.conf
@@ -2,6 +2,7 @@ exec autotiling
 exec swaync
 exec blueman-applet 
 exec nm-applet 
-exec /usr/lib/hyprpolkitagent
 exec flameshot
-# exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec kanata
+# exec /usr/lib/hyprpolkitagent
+exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
