--- a/zed/.config/zed/settings.json
+++ b/zed/.config/zed/settings.json
@@ -1,56 +1,45 @@
 {
   "vim_mode": true,
-  "auto_install_extensions": {
-    "html": true,
-    "svelte": true,
-    "catppuccin": true
+
+  "features": {
+    "edit_prediction_provider": "none",
   },
-  "buffer_font_family": "Hack Nerd Font",
-  "buffer_font_size": 18,
-  "close_on_file_delete": true,
-  "confirm_quit": true,
-  "current_line_highlight": "line",
-  "cursor_blink": false,
-  "hide_mouse": "on_typing",
-  "scrollbar": {
-    "show": "never"
-  },
-  "diagnostics": {
-    "inline": {
-      "enabled": true,
-      "update_debounce_ms": 75
-    }
-  },
-  "indent_guides": {
-    "coloring": "indent_aware"
-  },
-  "telemetry": {
-    "diagnostics": false,
-    "metrics": false
-  },
+
+  // ui settings
+  "icon_theme": "Catppuccin Mocha",
+  "ui_font_family": "Hack Nerd Font Mono",
+  "buffer_font_family": "Hack Nerd Font Mono",
+  "ui_font_size": 16,
+  "buffer_font_size": 20,
   "theme": {
-    "dark": "Tokyo Night",
-    "light": "Catppuccin Latte"
+    "mode": "system",
+    "light": "Ayu Light",
+    "dark": "Ayu Dark",
   },
-
-  // "features": { "edit_prediction_provider": "zed" },
-
-  "languages": {
-    "JavaScript": {
-      "formatter": {
-        "code_actions": {
-          "source.fixAll.eslint": true
-        }
-      }
-    }
+  "relative_line_numbers": "enabled",
+  "tab_size": 2,
+  "soft_wrap": "none",
+  "title_bar": {
+    "show_onboarding_banner": false,
+    "show_project_items": false,
+    "show_branch_name": false,
   },
-  "lsp": {
-    "eslint": {
-      "settings": {
-        "codeActionOnSave": {
-          "rules": ["import/order"]
-        }
-      }
-    }
-  }
+  "file_finder": {
+    "modal_max_width": "xlarge",
+  },
+  "scrollbar": {
+    "show": "never",
+  },
+  "gutter": {
+    "min_line_number_digits": 0,
+    "folds": false,
+  },
+  "cursor_blink": false,
+  "drag_and_drop_selection": {
+    "enabled": false,
+  },
+  "seed_search_query_from_cursor": "never",
+  "minimap": {
+    "show": "never",
+  },
 }
