--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -84,3 +84,5 @@ color15 #a6adc8
 map ctrl+backspace send_text all \x17
 map ctrl+left send_text all \x1b\x62
 map ctrl+right send_text all \x1b\x66
+
+map ctrl+shift+t new_tab_with_cwd
